[gd_scene load_steps=4 format=2]

[ext_resource path="res://Environment/CarryableObject.gd" type="Script" id=1]
[ext_resource path="res://Weapons/SlotItemImage.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 8 )

[node name="CarryableObject" type="Area2D"]
script = ExtResource( 1 )

[node name="SlotItemImage" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_CarryableObject_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CarryableObject_body_exited"]
